WIP - about half way through api and dal functions - service is in a broken state
